--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,14 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@heavy-duty/bulldozer/application/features/navigation": [
+        "libs/bulldozer/application/features/navigation/src/index.ts"
+      ],
+      "@heavy-duty/bulldozer/application/shell": [
+        "libs/bulldozer/application/shell/src/index.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
