--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular-eslint/template-parser": "~12.3.0",
     "@angular/compiler-cli": "^12.2.0",
     "@angular/language-service": "^12.2.0",
+    "@ngneat/tailwind": "^7.0.3",
     "@nrwl/cli": "12.9.0",
     "@nrwl/cypress": "12.9.0",
     "@nrwl/eslint-plugin-nx": "12.9.0",
@@ -44,13 +45,16 @@
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~4.28.3",
     "@typescript-eslint/parser": "~4.28.3",
+    "autoprefixer": "^10.3.7",
     "cypress": "^8.3.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.0.3",
     "jest-preset-angular": "9.0.7",
+    "postcss": "^8.3.9",
     "prettier": "^2.3.1",
+    "tailwindcss": "^2.2.16",
     "ts-jest": "27.0.3",
     "typescript": "~4.3.5"
   }
