feat(client): set up client app scaffold (#2)
* feat(client): generate the client app

* feat(client): set up custom webpack

* feat(client): set up angular material

* feat(client): set up navigation module

* chore(styles): set up tailwindcss

* style: add bulldozer draft logo

--- a/nx.json
+++ b/nx.json
@@ -14,12 +14,7 @@
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
       "options": {
-        "cacheableOperations": [
-          "build",
-          "lint",
-          "test",
-          "e2e"
-        ]
+        "cacheableOperations": ["build", "lint", "test", "e2e"]
       }
     }
   },
@@ -31,5 +26,19 @@
       }
     ]
   },
-  "projects": {}
+  "projects": {
+    "bulldozer-application-features-navigation": {
+      "tags": []
+    },
+    "bulldozer-application-shell": {
+      "tags": []
+    },
+    "bulldozer-client": {
+      "tags": []
+    },
+    "bulldozer-client-e2e": {
+      "tags": [],
+      "implicitDependencies": ["bulldozer-client"]
+    }
+  }
 }
