--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "@angular/platform-browser": "^12.2.0",
     "@angular/platform-browser-dynamic": "^12.2.0",
     "@angular/router": "^12.2.0",
+    "@danmt/wallet-adapter-angular": "^0.1.47",
+    "@ngrx/component": "^12.4.0",
+    "@ngrx/component-store": "^12.4.0",
     "@nrwl/angular": "^12.9.0",
+    "@solana/wallet-adapter-base": "^0.6.0",
+    "@solana/wallet-adapter-wallets": "^0.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
