feat(program): set up bulldozer program based on demobase

--- a/nx.json
+++ b/nx.json
@@ -27,6 +27,7 @@
     ]
   },
   "projects": {
+    "bulldozer": {},
     "bulldozer-application-features-connect-wallet": {
       "tags": []
     },
