--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@ngrx/component": "^12.4.0",
     "@ngrx/component-store": "^12.4.0",
     "@nrwl/angular": "^12.9.0",
+    "@project-serum/anchor": "^0.17.0",
     "@solana/wallet-adapter-base": "^0.6.0",
     "@solana/wallet-adapter-wallets": "^0.10.0",
+    "@solana/web3.js": "^1.28.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -38,6 +40,7 @@
     "@angular-eslint/template-parser": "~12.3.0",
     "@angular/compiler-cli": "^12.2.0",
     "@angular/language-service": "^12.2.0",
+    "@danmt/nx-anchor": "0.0.6",
     "@ngneat/tailwind": "^7.0.3",
     "@nrwl/cli": "12.9.0",
     "@nrwl/cypress": "12.9.0",
@@ -46,17 +49,21 @@
     "@nrwl/linter": "12.9.0",
     "@nrwl/tao": "12.9.0",
     "@nrwl/workspace": "12.9.0",
+    "@types/chai": "^4.2.21",
     "@types/jest": "26.0.24",
-    "@types/node": "14.14.33",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^14.17.20",
     "@typescript-eslint/eslint-plugin": "~4.28.3",
     "@typescript-eslint/parser": "~4.28.3",
     "autoprefixer": "^10.3.7",
+    "chai": "^4.3.4",
     "cypress": "^8.3.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.0.3",
     "jest-preset-angular": "9.0.7",
+    "mocha": "^9.0.3",
     "postcss": "^8.3.9",
     "prettier": "^2.3.1",
     "tailwindcss": "^2.2.16",
