--- a/libs/bulldozer/application/features/edit-basic-account/.eslintrc.json
+++ b/libs/bulldozer/application/features/edit-basic-account/.eslintrc.json
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "heavy-duty",
+            "prefix": "bd",
             "style": "kebab-case"
           }
         ]
