--- a/libs/bulldozer/application/utils/pipes/obscure-address/.eslintrc.json
+++ b/libs/bulldozer/application/utils/pipes/obscure-address/.eslintrc.json
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "heavy-duty",
+            "prefix": "bd",
             "style": "kebab-case"
           }
         ]
