--- a/libs/bulldozer/data-access/tsconfig.lib.json
+++ b/libs/bulldozer/data-access/tsconfig.lib.json
@@ -7,7 +7,8 @@
     "declarationMap": true,
     "inlineSources": true,
     "types": [],
-    "lib": ["dom", "es2018"]
+    "lib": ["dom", "es2018"],
+    "resolveJsonModule": true
   },
   "exclude": ["src/test-setup.ts", "**/*.spec.ts"],
   "include": ["**/*.ts"]
