--- a/libs/bulldozer/application/ui/directives/page-header/.eslintrc.json
+++ b/libs/bulldozer/application/ui/directives/page-header/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["../../../../.eslintrc.json"],
+  "extends": ["../../../../../../.eslintrc.json"],
   "ignorePatterns": ["!**/*"],
   "overrides": [
     {
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "heavyDuty",
+            "prefix": "bd",
             "style": "camelCase"
           }
         ],
