fix(PR-14): PR comments resolved. Missing favicon added.

--- a/libs/bulldozer/application/ui/dark-theme/.eslintrc.json
+++ b/libs/bulldozer/application/ui/dark-theme/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "heavyDuty",
+            "prefix": "db",
             "style": "camelCase"
           }
         ],
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "heavy-duty",
+            "prefix": "db",
             "style": "kebab-case"
           }
         ]
