feat(code-generator): basic library struct added

--- a/nx.json
+++ b/nx.json
@@ -103,6 +103,9 @@
     "bulldozer-shell": {
       "tags": []
     },
+    "code-generator": {
+      "tags": []
+    },
     "shared-utils-operators": {
       "tags": []
     }
