--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@solana/wallet-adapter-base": "^0.6.0",
     "@solana/wallet-adapter-wallets": "^0.10.1",
     "@solana/web3.js": "^1.28.0",
+    "handlebars": "^4.7.7",
+    "ngx-monaco-editor": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
