--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -79,6 +79,7 @@
         "libs/bulldozer/data-access/src/index.ts"
       ],
       "@heavy-duty/bulldozer/shell": ["libs/bulldozer/shell/src/index.ts"],
+      "@heavy-duty/code-generator": ["libs/code-generator/src/index.ts"],
       "@heavy-duty/shared/utils/operators": [
         "libs/shared/utils/operators/src/index.ts"
       ]
