--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^12.2.9",
     "@angular/router": "^12.2.9",
     "@danmt/wallet-adapter-angular": "^0.1.49",
+    "@danmt/wallet-adapter-angular-material-ui": "^0.1.11",
     "@ngrx/component": "^12.4.0",
     "@ngrx/component-store": "^12.4.0",
     "@nrwl/angular": "^12.9.0",
