--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "postinstall": "ngcc --properties es2015 browser module main"
+    "postinstall": "ngcc --properties es2015 browser module main",
+    "format": "nx format:write"
   },
   "private": true,
   "dependencies": {
@@ -62,13 +63,25 @@
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "husky": "^7.0.2",
     "jest": "27.0.3",
     "jest-preset-angular": "9.0.7",
+    "lint-staged": "^11.2.0",
     "mocha": "^9.0.3",
     "postcss": "^8.3.9",
     "prettier": "^2.3.1",
     "tailwindcss": "^2.2.16",
     "ts-jest": "27.0.3",
     "typescript": "~4.3.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,scss,md,ts,html}": [
+      "npm run format --uncommitted"
+    ]
   }
 }
