--- a/nx.json
+++ b/nx.json
@@ -87,6 +87,9 @@
     "bulldozer-application-utils-services-active-breakpoint": {
       "tags": []
     },
+    "bulldozer-application-utils-services-code-editor-settings": {
+      "tags": []
+    },
     "bulldozer-client": {
       "tags": []
     },
