feat(app): set up a section header

--- a/nx.json
+++ b/nx.json
@@ -75,6 +75,9 @@
     "bulldozer-application-ui-directives-page-header": {
       "tags": []
     },
+    "bulldozer-application-ui-directives-section-header": {
+      "tags": []
+    },
     "bulldozer-application-utils-pipes-obscure-address": {
       "tags": []
     },
