--- a/nx.json
+++ b/nx.json
@@ -30,6 +30,9 @@
     "bulldozer-application-data-access": {
       "tags": []
     },
+    "bulldozer-application-features-code-editor": {
+      "tags": []
+    },
     "bulldozer-application-features-edit-application": {
       "tags": []
     },
