feat(app): generate rust code based on the metadata provided (#18)
* feat(code-generator): :construction: code generator

* feat(code-generator): basic library struct added

* feat(code-generator): ngx monaco editor added. Connect with CG library

* feat(code-generator): :construction: Editor and service connected

* fix(code-generator): fix

* style(format): format all files

* feat(code-editor): code editor layout and service added

* feat(code-generator): full program collections and instructions rust gen

* feat(code-generator): :construction: accounts code generator added

* fix(code-editor): componente created and previus logic changed

* fix(code-generator): correct rustCode in application data access

* feat(code-generator): more format to generate instructions code added

* fix(review): implemented daniel reviews

* fix(PR-18): danmt code comments fixed

* fix(PR-18): daniel code comments fixed

Co-authored-by: Andres Guerrero <andresmgsl@gmail.com>

--- a/nx.json
+++ b/nx.json
@@ -30,6 +30,9 @@
     "bulldozer-application-data-access": {
       "tags": []
     },
+    "bulldozer-application-features-code-editor": {
+      "tags": []
+    },
     "bulldozer-application-features-edit-application": {
       "tags": []
     },
@@ -101,6 +104,9 @@
       "tags": []
     },
     "bulldozer-shell": {
+      "tags": []
+    },
+    "code-generator": {
       "tags": []
     },
     "shared-utils-operators": {
