feat(arweave): arweave code upload NestJs api added

--- a/nx.json
+++ b/nx.json
@@ -27,6 +27,12 @@
     ]
   },
   "projects": {
+    "bulldozer-arweave-code-upload": {
+      "tags": []
+    },
+    "arweave": {
+      "tags": []
+    },
     "bulldozer-application-data-access": {
       "tags": []
     },
