--- a/package.json
+++ b/package.json
@@ -23,17 +23,23 @@
     "@angular/router": "^12.2.9",
     "@danmt/wallet-adapter-angular": "^0.1.49",
     "@danmt/wallet-adapter-angular-material-ui": "^0.1.13",
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.0",
     "@ngrx/component": "^12.4.0",
     "@ngrx/component-store": "^12.4.0",
-    "@nrwl/angular": "^12.9.0",
     "@project-serum/anchor": "^0.17.0",
     "@solana/wallet-adapter-base": "^0.6.0",
     "@solana/wallet-adapter-wallets": "^0.10.1",
     "@solana/web3.js": "^1.28.0",
+    "arweave": "^1.10.16",
+    "class-validator": "^0.13.1",
     "handlebars": "^4.7.7",
     "monaco-editor": "^0.28.1",
     "ngx-monaco-editor": "^12.0.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
+    "testweave-sdk": "^0.2.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
@@ -48,12 +54,17 @@
     "@commitlint/cli": "^13.2.0",
     "@commitlint/config-conventional": "^13.2.0",
     "@danmt/nx-anchor": "0.0.6",
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.0",
     "@ngneat/tailwind": "^7.0.3",
+    "@nrwl/angular": "^12.9.0",
     "@nrwl/cli": "12.9.0",
     "@nrwl/cypress": "12.9.0",
     "@nrwl/eslint-plugin-nx": "12.9.0",
     "@nrwl/jest": "12.9.0",
     "@nrwl/linter": "12.9.0",
+    "@nrwl/nest": "^12.10.0",
+    "@nrwl/node": "12.10.0",
     "@nrwl/tao": "12.9.0",
     "@nrwl/workspace": "12.9.0",
     "@types/chai": "^4.2.21",
