feat(code-file-manager): collections and instructions files zipped

--- a/nx.json
+++ b/nx.json
@@ -106,6 +106,9 @@
     "bulldozer-shell": {
       "tags": []
     },
+    "code-file-manager": {
+      "tags": []
+    },
     "code-generator": {
       "tags": []
     },
