--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@solana/wallet-adapter-base": "^0.6.0",
     "@solana/wallet-adapter-wallets": "^0.10.1",
     "@solana/web3.js": "^1.28.0",
+    "file-saver": "^2.0.5",
     "handlebars": "^4.7.7",
+    "jszip": "^3.7.1",
     "monaco-editor": "^0.28.1",
     "ngx-monaco-editor": "^12.0.0",
     "rxjs": "~6.6.0",
@@ -57,6 +59,7 @@
     "@nrwl/tao": "12.9.0",
     "@nrwl/workspace": "12.9.0",
     "@types/chai": "^4.2.21",
+    "@types/file-saver": "^2.0.3",
     "@types/jest": "26.0.24",
     "@types/mocha": "^9.0.0",
     "@types/node": "^14.17.21",
