refactor(code-generator): massive refactoring

--- a/nx.json
+++ b/nx.json
@@ -90,6 +90,12 @@
     "bulldozer-application-utils-services-active-breakpoint": {
       "tags": []
     },
+    "bulldozer-application-utils-services-code-generator": {
+      "tags": []
+    },
+    "bulldozer-application-utils-types": {
+      "tags": []
+    },
     "bulldozer-client": {
       "tags": []
     },
@@ -104,12 +110,6 @@
       "tags": []
     },
     "bulldozer-shell": {
-      "tags": []
-    },
-    "code-file-manager": {
-      "tags": []
-    },
-    "code-generator": {
       "tags": []
     },
     "shared-utils-operators": {
