--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -78,12 +78,16 @@
       "@heavy-duty/bulldozer/application/utils/services/active-breakpoint": [
         "libs/bulldozer/application/utils/services/active-breakpoint/src/index.ts"
       ],
+      "@heavy-duty/bulldozer/application/utils/services/code-generator": [
+        "libs/bulldozer/application/utils/services/code-generator/src/index.ts"
+      ],
+      "@heavy-duty/bulldozer/application/utils/types": [
+        "libs/bulldozer/application/utils/types/src/index.ts"
+      ],
       "@heavy-duty/bulldozer/data-access": [
         "libs/bulldozer/data-access/src/index.ts"
       ],
       "@heavy-duty/bulldozer/shell": ["libs/bulldozer/shell/src/index.ts"],
-      "@heavy-duty/code-file-manager": ["libs/code-file-manager/src/index.ts"],
-      "@heavy-duty/code-generator": ["libs/code-generator/src/index.ts"],
       "@heavy-duty/shared/utils/operators": [
         "libs/shared/utils/operators/src/index.ts"
       ]
