--- a/libs/bulldozer/application/features/edit-basic-account/.eslintrc.json
+++ b/libs/bulldozer/application/features/edit-basic-account/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "heavyDuty",
+            "prefix": "bd",
             "style": "camelCase"
           }
         ],
