feat(app): set up an edit relation lib

--- a/nx.json
+++ b/nx.json
@@ -54,6 +54,9 @@
     "bulldozer-application-features-edit-program-account": {
       "tags": []
     },
+    "bulldozer-application-features-edit-relation": {
+      "tags": []
+    },
     "bulldozer-application-features-edit-signer-account": {
       "tags": []
     },
