--- a/libs/bulldozer/data-access/tsconfig.lib.json
+++ b/libs/bulldozer/data-access/tsconfig.lib.json
@@ -7,8 +7,7 @@
     "declarationMap": true,
     "inlineSources": true,
     "types": [],
-    "lib": ["dom", "es2018"],
-    "resolveJsonModule": true
+    "lib": ["dom", "es2018"]
   },
   "exclude": ["src/test-setup.ts", "**/*.spec.ts"],
   "include": ["**/*.ts"]
