--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.9",
-    "@angular/cdk": "^12.2.9",
-    "@angular/common": "^12.2.9",
-    "@angular/compiler": "^12.2.9",
-    "@angular/core": "^12.2.9",
-    "@angular/forms": "^12.2.9",
-    "@angular/material": "^12.2.9",
-    "@angular/platform-browser": "^12.2.9",
-    "@angular/platform-browser-dynamic": "^12.2.9",
-    "@angular/router": "^12.2.9",
+    "@angular/animations": "^12.2.10",
+    "@angular/cdk": "^12.2.10",
+    "@angular/common": "^12.2.10",
+    "@angular/compiler": "^12.2.10",
+    "@angular/core": "^12.2.10",
+    "@angular/forms": "^12.2.10",
+    "@angular/material": "^12.2.10",
+    "@angular/platform-browser": "^12.2.10",
+    "@angular/platform-browser-dynamic": "^12.2.10",
+    "@angular/router": "^12.2.10",
     "@danmt/wallet-adapter-angular": "^0.1.49",
     "@danmt/wallet-adapter-angular-material-ui": "^0.1.13",
-    "@ngrx/component": "^12.4.0",
-    "@ngrx/component-store": "^12.4.0",
-    "@nrwl/angular": "^12.9.0",
+    "@heavy-duty/ng-anchor": "^0.1.0",
+    "@ngrx/component": "^12.5.0",
+    "@ngrx/component-store": "^12.5.0",
+    "@nrwl/angular": "^12.10.0",
     "@project-serum/anchor": "^0.17.0",
     "@solana/wallet-adapter-base": "^0.6.0",
     "@solana/wallet-adapter-wallets": "^0.10.1",
@@ -41,13 +42,13 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^12.1.3",
-    "@angular-devkit/build-angular": "^12.2.9",
+    "@angular-devkit/build-angular": "^12.2.10",
     "@angular-eslint/eslint-plugin": "~12.3.0",
     "@angular-eslint/eslint-plugin-template": "~12.3.0",
     "@angular-eslint/template-parser": "~12.3.0",
-    "@angular/compiler-cli": "^12.2.9",
-    "@angular/language-service": "^12.2.9",
-    "@commitlint/cli": "^13.2.0",
+    "@angular/compiler-cli": "^12.2.10",
+    "@angular/language-service": "^12.2.10",
+    "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@danmt/nx-anchor": "0.0.6",
     "@ngneat/tailwind": "^7.0.3",
@@ -62,23 +63,24 @@
     "@types/file-saver": "^2.0.3",
     "@types/jest": "26.0.24",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^14.17.21",
+    "@types/node": "^14.17.27",
     "@typescript-eslint/eslint-plugin": "~4.28.3",
     "@typescript-eslint/parser": "~4.28.3",
     "autoprefixer": "^10.3.7",
     "chai": "^4.3.4",
-    "cypress": "^8.3.0",
+    "cypress": "^8.6.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "husky": "^7.0.2",
     "jest": "27.0.3",
     "jest-preset-angular": "9.0.7",
-    "lint-staged": "^11.2.0",
-    "mocha": "^9.0.3",
+    "lint-staged": "^11.2.3",
+    "mocha": "^9.1.3",
+    "ng-packagr": "^12.1.1",
     "postcss": "^8.3.9",
     "prettier": "^2.3.1",
-    "tailwindcss": "^2.2.16",
+    "tailwindcss": "^2.2.17",
     "ts-jest": "27.0.3",
     "typescript": "~4.3.5"
   },
