feat(ng-anchor): set up the library structure

--- a/nx.json
+++ b/nx.json
@@ -115,6 +115,9 @@
     "bulldozer-shell": {
       "tags": []
     },
+    "shared-ng-anchor": {
+      "tags": []
+    },
     "shared-utils-operators": {
       "tags": []
     }
