--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -91,6 +91,7 @@
         "libs/bulldozer/data-access/src/index.ts"
       ],
       "@heavy-duty/bulldozer/shell": ["libs/bulldozer/shell/src/index.ts"],
+      "@heavy-duty/ng-anchor": ["libs/shared/ng-anchor/src/index.ts"],
       "@heavy-duty/shared/utils/operators": [
         "libs/shared/utils/operators/src/index.ts"
       ]
