--- a/apps/bulldozer-programs/Anchor.toml
+++ b/apps/bulldozer-programs/Anchor.toml
@@ -9,4 +9,4 @@ cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "ts-mocha -p ./tsconfig.json -t 1000000 tests/instruction-argument.spec.ts --parallel"
+test = "ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts --parallel"
