feat(wallet-adapter): copy wallet-adapter into the monorepo

--- a/nx.json
+++ b/nx.json
@@ -123,6 +123,12 @@
     },
     "shared-utils-operators": {
       "tags": []
+    },
+    "shared-wallet-adapter": {
+      "tags": []
+    },
+    "shared-wallet-adapter-ui": {
+      "tags": []
     }
   }
 }
