--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -97,6 +97,10 @@
       "@heavy-duty/ng-anchor": ["libs/shared/ng-anchor/src/index.ts"],
       "@heavy-duty/shared/utils/operators": [
         "libs/shared/utils/operators/src/index.ts"
+      ],
+      "@heavy-duty/wallet-adapter": ["libs/shared/wallet-adapter/src/index.ts"],
+      "@heavy-duty/wallet-adapter-ui": [
+        "libs/shared/wallet-adapter-ui/src/index.ts"
       ]
     }
   },
