--- a/libs/shared/ng-anchor/package.json
+++ b/libs/shared/ng-anchor/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@heavy-duty/ng-anchor",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "peerDependencies": {
-    "@angular/common": "^12.2.0",
-    "@angular/core": "^12.2.0"
+    "@angular/common": "13.0.1",
+    "@angular/core": "13.0.1"
   },
   "dependencies": {
     "tslib": "^2.3.0"
