--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^12.1.3",
+    "@angular-builders/custom-webpack": "13.0.0",
     "@angular-devkit/build-angular": "13.0.2",
     "@angular-eslint/eslint-plugin": "12.6.1",
     "@angular-eslint/eslint-plugin-template": "12.6.1",
