refactor(bulldozer-client): bump ngrx/component* libraries

--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "@angular/platform-browser": "13.0.1",
     "@angular/platform-browser-dynamic": "13.0.1",
     "@angular/router": "13.0.1",
-    "@ngrx/component": "^12.5.0",
-    "@ngrx/component-store": "12.5.1",
+    "@ngrx/component": "13.0.2",
+    "@ngrx/component-store": "13.0.2",
     "@nrwl/angular": "13.2.0-rc.1",
     "@project-serum/anchor": "^0.19.0",
-    "@solana/wallet-adapter-base": "^0.8.0",
+    "@solana/wallet-adapter-base": "^0.8.1",
     "@solana/wallet-adapter-wallets": "^0.13.0",
     "@solana/web3.js": "^1.28.0",
     "file-saver": "^2.0.5",
@@ -60,7 +60,7 @@
     "@types/file-saver": "^2.0.3",
     "@types/jest": "27.0.2",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^14.17.27",
+    "@types/node": "^14.18.1",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
     "autoprefixer": "^10.3.7",
