--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "13.0.1",
-    "@angular/cdk": "13.0.1",
-    "@angular/common": "13.0.1",
-    "@angular/compiler": "13.0.1",
-    "@angular/core": "13.0.1",
-    "@angular/forms": "13.0.1",
-    "@angular/material": "13.0.1",
-    "@angular/platform-browser": "13.0.1",
-    "@angular/platform-browser-dynamic": "13.0.1",
-    "@angular/router": "13.0.1",
+    "@angular/animations": "13.1.0",
+    "@angular/cdk": "13.1.0",
+    "@angular/common": "13.1.0",
+    "@angular/compiler": "13.1.0",
+    "@angular/core": "13.1.0",
+    "@angular/forms": "13.1.0",
+    "@angular/material": "13.1.0",
+    "@angular/platform-browser": "13.1.0",
+    "@angular/platform-browser-dynamic": "13.1.0",
+    "@angular/router": "13.1.0",
     "@ngrx/component": "13.0.2",
     "@ngrx/component-store": "13.0.2",
     "@nrwl/angular": "13.2.0-rc.1",
@@ -38,13 +38,13 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "13.0.0",
+    "@angular-builders/custom-webpack": "^13.0.0",
     "@angular-devkit/build-angular": "13.0.2",
     "@angular-eslint/eslint-plugin": "12.6.1",
     "@angular-eslint/eslint-plugin-template": "12.6.1",
     "@angular-eslint/template-parser": "12.6.1",
-    "@angular/compiler-cli": "13.0.1",
-    "@angular/language-service": "13.0.1",
+    "@angular/compiler-cli": "13.1.0",
+    "@angular/language-service": "13.1.0",
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@danmt/nx-anchor": "0.0.6",
@@ -82,7 +82,7 @@
     "prettier": "^2.3.1",
     "tailwindcss": "^2.2.17",
     "ts-jest": "27.0.5",
-    "typescript": "4.4.4"
+    "typescript": "^4.5.4"
   },
   "husky": {
     "hooks": {
