--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/router": "13.1.0",
     "@ngrx/component": "13.0.2",
     "@ngrx/component-store": "13.0.2",
-    "@nrwl/angular": "13.2.0-rc.1",
+    "@nrwl/angular": "13.3.9",
     "@project-serum/anchor": "^0.19.0",
     "@solana/wallet-adapter-base": "^0.8.1",
     "@solana/wallet-adapter-wallets": "^0.13.0",
@@ -40,33 +40,33 @@
   "devDependencies": {
     "@angular-builders/custom-webpack": "^13.0.0",
     "@angular-devkit/build-angular": "13.0.2",
-    "@angular-eslint/eslint-plugin": "12.6.1",
-    "@angular-eslint/eslint-plugin-template": "12.6.1",
-    "@angular-eslint/template-parser": "12.6.1",
+    "@angular-eslint/eslint-plugin": "13.0.1",
+    "@angular-eslint/eslint-plugin-template": "13.0.1",
+    "@angular-eslint/template-parser": "13.0.1",
     "@angular/compiler-cli": "13.1.0",
     "@angular/language-service": "13.1.0",
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@danmt/nx-anchor": "0.0.6",
     "@ngneat/tailwind": "^7.0.3",
-    "@nrwl/cli": "13.2.0-rc.1",
-    "@nrwl/cypress": "13.2.0-rc.1",
-    "@nrwl/eslint-plugin-nx": "13.2.0-rc.1",
-    "@nrwl/jest": "13.2.0-rc.1",
-    "@nrwl/linter": "13.2.0-rc.1",
-    "@nrwl/tao": "13.2.0-rc.1",
-    "@nrwl/workspace": "13.2.0-rc.1",
+    "@nrwl/cli": "13.3.9",
+    "@nrwl/cypress": "13.3.9",
+    "@nrwl/eslint-plugin-nx": "13.3.9",
+    "@nrwl/jest": "13.3.9",
+    "@nrwl/linter": "13.3.9",
+    "@nrwl/tao": "13.3.9",
+    "@nrwl/workspace": "13.3.9",
     "@types/chai": "^4.2.21",
     "@types/file-saver": "^2.0.3",
     "@types/jest": "27.0.2",
     "@types/mocha": "^9.0.0",
     "@types/node": "^14.18.1",
-    "@typescript-eslint/eslint-plugin": "4.33.0",
-    "@typescript-eslint/parser": "4.33.0",
+    "@typescript-eslint/eslint-plugin": "5.3.1",
+    "@typescript-eslint/parser": "5.3.1",
     "autoprefixer": "^10.3.7",
     "chai": "^4.3.4",
     "cypress": "^8.6.0",
-    "eslint": "7.32.0",
+    "eslint": "8.2.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "husky": "^7.0.2",
