refactor(core): update wallet-adapter base and wallets (#69)
* refactor(wallet-adapter): update wallet adapter

* refactor(bulldozer-client): add solong wallet

* refactor(bulldozer-client): bump ngrx/component* libraries

* feat(core): load wallets on init

BREAKING CHANGE: WalletConfig interface changed, now you need to loadWallets onInit

* feat(core): handle network and endpoint in connection store

* fix(wallet-adapter): handle window unload event

* refactor(wallet-adapter): use destructuring for selectors

* chore(core): bump wallet-adapter versions

* fix(wallet-adapter): check window is valid before handling unload

* chore(deps): bump angular

* chore(wallet-adapter): update library

* chore(core): run nx migrate

* chore(ts): allow syntethic default for solana-wallet-base

* chore(wallet-adapter): bump version

* refactor(wallet-adapter): rename loadWallets as setWallets

* chore(bulldozer-client): fix linting issues due to package versions

* style(wallet-adapter): remove unneeded breakline

* refactor(wallet-adapter): endpoint shouldn't have a default value

* test(bulldozer-programs): use the right program id

--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "13.0.1",
-    "@angular/cdk": "13.0.1",
-    "@angular/common": "13.0.1",
-    "@angular/compiler": "13.0.1",
-    "@angular/core": "13.0.1",
-    "@angular/forms": "13.0.1",
-    "@angular/material": "13.0.1",
-    "@angular/platform-browser": "13.0.1",
-    "@angular/platform-browser-dynamic": "13.0.1",
-    "@angular/router": "13.0.1",
-    "@ngrx/component": "^12.5.0",
-    "@ngrx/component-store": "12.5.1",
-    "@nrwl/angular": "13.2.0-rc.1",
+    "@angular/animations": "13.1.0",
+    "@angular/cdk": "13.1.0",
+    "@angular/common": "13.1.0",
+    "@angular/compiler": "13.1.0",
+    "@angular/core": "13.1.0",
+    "@angular/forms": "13.1.0",
+    "@angular/material": "13.1.0",
+    "@angular/platform-browser": "13.1.0",
+    "@angular/platform-browser-dynamic": "13.1.0",
+    "@angular/router": "13.1.0",
+    "@ngrx/component": "13.0.2",
+    "@ngrx/component-store": "13.0.2",
+    "@nrwl/angular": "13.3.11",
     "@project-serum/anchor": "^0.19.0",
-    "@solana/wallet-adapter-base": "^0.6.0",
-    "@solana/wallet-adapter-wallets": "^0.10.1",
+    "@solana/wallet-adapter-base": "^0.8.1",
+    "@solana/wallet-adapter-wallets": "^0.13.0",
     "@solana/web3.js": "^1.28.0",
     "file-saver": "^2.0.5",
     "handlebars": "^4.7.7",
@@ -38,35 +38,35 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "13.0.0",
+    "@angular-builders/custom-webpack": "^13.0.0",
     "@angular-devkit/build-angular": "13.0.2",
-    "@angular-eslint/eslint-plugin": "12.6.1",
-    "@angular-eslint/eslint-plugin-template": "12.6.1",
-    "@angular-eslint/template-parser": "12.6.1",
-    "@angular/compiler-cli": "13.0.1",
-    "@angular/language-service": "13.0.1",
+    "@angular-eslint/eslint-plugin": "13.0.1",
+    "@angular-eslint/eslint-plugin-template": "13.0.1",
+    "@angular-eslint/template-parser": "13.0.1",
+    "@angular/compiler-cli": "13.1.0",
+    "@angular/language-service": "13.1.0",
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@danmt/nx-anchor": "0.0.6",
     "@ngneat/tailwind": "^7.0.3",
-    "@nrwl/cli": "13.2.0-rc.1",
-    "@nrwl/cypress": "13.2.0-rc.1",
-    "@nrwl/eslint-plugin-nx": "13.2.0-rc.1",
-    "@nrwl/jest": "13.2.0-rc.1",
-    "@nrwl/linter": "13.2.0-rc.1",
-    "@nrwl/tao": "13.2.0-rc.1",
-    "@nrwl/workspace": "13.2.0-rc.1",
+    "@nrwl/cli": "13.3.11",
+    "@nrwl/cypress": "13.3.11",
+    "@nrwl/eslint-plugin-nx": "13.3.11",
+    "@nrwl/jest": "13.3.11",
+    "@nrwl/linter": "13.3.11",
+    "@nrwl/tao": "13.3.11",
+    "@nrwl/workspace": "13.3.11",
     "@types/chai": "^4.2.21",
     "@types/file-saver": "^2.0.3",
     "@types/jest": "27.0.2",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^14.17.27",
-    "@typescript-eslint/eslint-plugin": "4.33.0",
-    "@typescript-eslint/parser": "4.33.0",
+    "@types/node": "^14.18.1",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
     "autoprefixer": "^10.3.7",
     "chai": "^4.3.4",
     "cypress": "^8.6.0",
-    "eslint": "7.32.0",
+    "eslint": "8.2.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "husky": "^7.0.2",
@@ -82,7 +82,7 @@
     "prettier": "^2.3.1",
     "tailwindcss": "^2.2.17",
     "ts-jest": "27.0.5",
-    "typescript": "4.4.4"
+    "typescript": "^4.5.4"
   },
   "husky": {
     "hooks": {
