chore(nx): update angular:library generator defaults

--- a/nx.json
+++ b/nx.json
@@ -38,9 +38,10 @@
       "e2eTestRunner": "cypress"
     },
     "@nrwl/angular:library": {
-      "style": "scss",
       "linter": "eslint",
-      "unitTestRunner": "jest"
+      "unitTestRunner": "jest",
+      "simpleModuleName": true,
+      "standaloneConfig": true
     },
     "@nrwl/angular:component": {
       "style": "scss"
