feat(bulldozer-client): generate unauthorized page

--- a/nx.json
+++ b/nx.json
@@ -51,7 +51,8 @@
       "inlineTemplate": true,
       "skipTests": true,
       "inlineScam": false
-    }
+    },
+    "@nrwl/angular:component": {}
   },
   "defaultProject": "bulldozer-client"
 }
