--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@angular-eslint/eslint-plugin": "13.0.1",
     "@angular-eslint/eslint-plugin-template": "13.0.1",
     "@angular-eslint/template-parser": "13.0.1",
+    "@angular/cli": "~13.1.0",
     "@angular/compiler-cli": "13.1.0",
     "@angular/language-service": "13.1.0",
     "@commitlint/cli": "^13.2.1",
