--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,8 @@
     "titleBar.inactiveBackground": "#ffc40799",
     "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.color": "#ffc407"
+  "peacock.color": "#ffc407",
+  "conventionalCommits.scopes": [
+    "bulldozer-client"
+  ]
 }
