feat(bulldozer): recursive delete for items (#86)
* feat(bulldozer-client): :zap: add recursive delete functionality

* chore(editor): :construction: add change scopes in settings json

* chore(editor): add more change scopes to settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,11 @@
     "titleBar.inactiveBackground": "#ffc40799",
     "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.color": "#ffc407"
+  "peacock.color": "#ffc407",
+  "conventionalCommits.scopes": [
+    "core",
+    "bulldozer-programs",
+    "bulldozer-client",
+    "editor"
+  ]
 }
