chore(wallet-adapter): use alpha version for wallet-adapter

--- a/libs/shared/wallet-adapter-ui/package.json
+++ b/libs/shared/wallet-adapter-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@heavy-duty/wallet-adapter-ui",
-  "version": "0.1.4",
+  "version": "0.1.0-alpha.1",
   "peerDependencies": {
     "@angular/common": "13.1.0",
     "@angular/core": "13.1.0"
